// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<AppSecret /> should call the click handler when "Get New Secret" is pressed 1`] = `
<div
  className="alert alert-warning"
>
  <p>
    You can regenerate your clientSecret below. This process will clear your old clientSecret and require updated to your apps or scripts.
  </p>
  <button
    className="btn orange"
    onClick={[Function]}
    type="button"
  >
    Regenerate Application clientSecret
  </button>
  <p>
    <strong>
      Here is your new clientSecret.
    </strong>
    <br />
    <code>
      a-test-secret
    </code>
  </p>
</div>
`;

exports[`<AppSecret /> should not display the secret if not provided 1`] = `
<div
  className="alert alert-warning"
>
  <p>
    You can regenerate your clientSecret below. This process will clear your old clientSecret and require updated to your apps or scripts.
  </p>
  <button
    className="btn orange"
    onClick={[Function]}
    type="button"
  >
    Regenerate Application clientSecret
  </button>
</div>
`;
